--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -50,6 +50,7 @@ Example:
   <link rel="import" href="sps-login.html">
   <link rel="import" href="sps-page-presentations.html">
   <link rel="import" href="sps-page-viewers.html">
+  <link rel="import" href="sps-page-presentation-details.html">
 
   <style include="iron-flex"></style>
   <template>
@@ -111,6 +112,7 @@ Example:
         </div>
         <neon-animated-pages id="pageSelector" attr-for-selected="data-page" entry-animation="fade-in-animation" exit-animation="fade-out-animation">
           <sps-page-presentations data-page="presentations" ctx="{{ctx}}"></sps-page-presentations>
+          <sps-page-presentation-details data-page="presentation_details" ctx="{{ctx}}" presentations-to-view="[[presentationsToView]]"></sps-page-presentation-details>
           <sps-page-viewers data-page="viewers" ctx="{{ctx}}"></sps-page-viewers>
           <polyquiz-page-home data-page="home"></polyquiz-page-home>
           <polyquiz-page-takeaquiz data-page="takeaquiz" ctx="[[ctx]]"></polyquiz-page-takeaquiz>
@@ -170,6 +172,10 @@ Example:
         },
         adminStatus: {
           type: Object
+        },
+        presentationsToView: {
+          type: Array,
+          value: []
         },
         ctx: {
           type: Object,
