--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -217,7 +217,7 @@ Example:
         } else if(e.target.parentNode.getAttribute('data-page')) {
           pageId = e.target.parentNode.getAttribute('data-page');
         }
-        page('#!/' + pageId);
+        page('/' + pageId);
       },
       ready: function() {
         //this.$.adminStatusAjax.generateRequest();
