--- a/public/elements/sps-page-presentation-details.html
+++ b/public/elements/sps-page-presentation-details.html
@@ -87,7 +87,7 @@ Example:
         this.$.presAjax.generateRequest();
       },
       ready: function() {
-        this._doAjax();
+        console.log(this.ctx);
       }
     });
   </script>
